@@ -1,8 +1,11 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/xlwt/xlwt-0.7.2.ebuild,v 1.3 2009/11/08 19:54:56 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/xlwt/xlwt-0.7.2.ebuild,v 1.4 2010/02/06 14:22:42 arfrever Exp $
 
-EAPI=2
+EAPI="2"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+
 inherit distutils
 
 DESCRIPTION="Python library to create spreadsheet files compatible with Excel"
@@ -14,23 +17,31 @@ SLOT="0"
 KEYWORDS="amd64 ppc x86"
 IUSE="examples"
 
+DEPEND=""
+RDEPEND=""
+RESTRICT_PYTHON_ABIS="3.*"
+
 src_prepare() {
-	# prevint installing from doc and examples in python libdir
-	sed -i \
-		-e '/package_data/,+6d' \
-		setup.py || die
+	distutils_src_prepare
+
+	# Don't install documentation and examples in site-packages directories.
+	sed -e "/package_data/,+6d" -i setup.py || die "sed failed"
 }
 
 src_test() {
-	cd "${S}"/tests
-	PYTHONPATH=../build/lib "${python}" RKbug.py 1 || die "test failed"
+	cd tests
+	testing() {
+		PYTHONPATH="../build-${PYTHON_ABI}/lib" "$(PYTHON)" RKbug.py 1
+	}
+	python_execute_function testing
 }
 
 src_install() {
 	distutils_src_install
+
 	insinto /usr/share/doc/${PF}
 	doins -r HISTORY.html xlwt/doc/xlwt.html tests
 	if use examples; then
-		doins -r xlwt/examples || die
+		doins -r xlwt/examples || die "doins failed"
 	fi
 }
