@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/xlwt
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/xlwt/ChangeLog,v 1.8 2009/11/08 19:54:56 nixnut Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/xlwt/ChangeLog,v 1.9 2010/02/06 14:22:42 arfrever Exp $
+
+  06 Feb 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  xlwt-0.7.2.ebuild:
+  Set SUPPORT_PYTHON_ABIS.
 
   08 Nov 2009; nixnut <nixnut@gentoo.org> xlwt-0.7.2.ebuild:
   ppc stable #290607
